# discord_gradiusbot

./: .env.example  .gitignore  .gitmodules  Dockerfile  README.md  README_DEVELOPER.md  admin_requirements.txt  botcmd.py  config.conf.example  config.json.example  config.py.example  echoes_pp_target_msg_id  gradiusbot.py  gradiusbot_examples.py  gradiusbot_wrapper.sh  item_definitions.sqlite  plugin_loader.py  pyproject.toml  pyproject.toml.old  raw_message_dump.py  reconnect_wrapper.py  requirements.txt
cogs/: buttons.py  delete_roles.py  demo.py  dumb_role.py  echo.py  example_cog.py  example_tasks.py  inventory.py  message_cleanup.py  namecolor.py  pagetest.py  paginator.py  role_cta_button.py  role_selector.py  wowe_sewector.py
docs/: docker.md
event_plugins/: banpool_events.py  boards_greeting.py  event_tracking.py  example_event_plugin.py  log_events.py  save_deleted_attachments.py  streamer_grouper.py
k8s/: configmap.yaml.example  gradiusbot_pod.yaml  gradiusbot_pvc.yaml
libs/: ac_libs.py  amplitude_lib.py  banpool.py  banpool_configuration.py  chat_rpg.py  elastic_logging.py  emoji_list.py  eve_pi_libs.py  json_logging.py  link_keeper.py  loot.py  moderation.py  paginator.py  plugin_loader.py  ratelimit.py  router.py  steam_helper.py  task_router.py  tellmoji_libs.py  ticket_master.py  tournament_libs.py  wallet.py
old/: LICENSE  README.md  config.conf.example  gradiusbot.py
private_plugins/: _example_background_task.py  admin_panel.py  boards_validation.py  example.py  forward_pm.py  inventory.py  log_to_file.py  moderation.py  namecolor.py  (+11 more)
(+153 files in other folders)
